--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 DATABASE_URL=mongodb://localhost/gaader
 DATABASE_URL_ATLAS=mongodb+srv://Kirkemann:Dulle3012@kirkemann-ah9zl.azure.mongodb.net/test
+PORT = 5002
+NODE_ENV = 'development'
+SESS_NAME = 'sid'
+SES_SECRET = 'ssh!quiet,it\'asecret!'
+SESS_LIFETIME = TWO_HOURS
