--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "gaader",
   "version": "1.0.0",
+  "engines": { 
+    "node": "12.14.1"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "serverStart": "nodemon server.js",
+    "start": "node server.js"
   },
   "author": "Frank Kirkemann",
   "license": "ISC",
